--- a/CommunityCrimeApp/packages.config
+++ b/CommunityCrimeApp/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CSM.SodaDotNet" version="0.10.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="GMap.NET.Core" version="2.0.2" targetFramework="net472" />
   <package id="GMap.NET.Windows" version="2.0.2" targetFramework="net472" />
   <package id="GMap.NET.WinForms" version="2.0.2" targetFramework="net472" />
   <package id="GMap.NET.WinPresentation" version="2.0.2" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
@@ -12,5 +14,12 @@
   <package id="System.Data.SQLite.Core" version="1.0.113.7" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
 </packages>
